19 Sep 2013: Wouter
	- 1.4.21 tag created.
	- trunk has 1.4.22 number inside it.
	- iana portlist updated.

16 Sep 2013: Wouter
	- Fix#524: max-udp-size not effective to non-EDNS0 queries, from
	  Daisuke HIGASHI.

10 Sep 2013: Wouter
	- MIN_TTL and MAX_TTL also in time_t.
	- tag 1.4.21rc1 made again.

26 Aug 2013: Wouter
	- More fixes for bug#519: for the threaded case test if the bg
	  thread has been killed, on ub_ctx_delete, to avoid hangs.

22 Aug 2013: Wouter
	- more fixes that I overlooked.
	- review fixes from Willem.

21 Aug 2013: Wouter
	- Fix#520: Errors found by static analysis from Tomas Hozza(redhat).

20 Aug 2013: Wouter
	- Fix for 2038, with time_t instead of uint32_t.

19 Aug 2013: Wouter
	- Fix#519 ub_ctx_delete may hang in some scenarios (libunbound).

14 Aug 2013: Wouter
	- Fix uninit variable in fix#516.

8 Aug 2013: Wouter
	- Fix#516 dnssec lameness detection for answers that are improper.

30 Jun 2013: Wouter
	- tag 1.4.21rc1

29 Jun 2013: Wouter
	- Fix#512 memleak in testcode for testbound (if it fails).
	- Fix#512 NSS returned arrays out of setup function to be statics.

26 Jun 2013: Wouter
	- max include of 100.000 files (depth and globbed at one time).
	  This is to preserve system memory in bug cases, or endless cases.
	- iana portlist updated.

19 Jun 2013: Wouter
	- streamtcp man page, contributed by Tomas Hozza.
	- iana portlist updated.
	- libunbound documentation on how to avoid openssl race conditions.

25 Jun 2013: Wouter
	- Squelch sendto-permission denied errors when the network is
	  not connected, to avoid spamming syslog.
	- configure --disable-flto option (from Robert Edmonds).

18 Jun 2013: Wouter
	- Fix for const string literals in C++ for libunbound, from Karel
	  Slany.
	- iana portlist updated.

17 Jun 2013: Wouter
	- Fixup manpage syntax.

14 Jun 2013: Wouter
	- get_option and set_option support for log-time-ascii, python-script
	  val-sig-skew-min and val-sig-skew-max.  log-time-ascii takes effect